2005-01-04  Shakti Sen <shprasad@novell.com>

	* theme-thumbnailer.c (main): Added the full path of the theme
	so that it will create the thumbnail.
	Fixes bug #153203
	
2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* themus-properties-view.c: Use gi18n-lib for internationalization,
	fixes #109206.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=134389
	* Makefile.am : Patch from jmmv@menta.net (Julio M. Merino Vidal)
	  to honour the standard schema install flags.
	  I've extended the patch to support builddir != srcdir too

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-07  Alex Duggan  <aldug@astrolinux.com>

	* theme-method.c: 
	Remove #define _(s) and replaced with #include <glib/gi18n.h> 
	which fixes bug #130757.  Add a function prototype 
	(copied from font-method.c) to fix compiler warning.
	
	* themus-properties-view.c:
	Remove unused variable to fix compiler warning.

2004-01-02  Andrew Sobala  <aes@gnome.org>

	* Makefile.am:
	* themus-theme-applier.c: (main): use GNOMECC_GLADE_DIR. Patch from
	Marcin Krzyzanowski. Fixes: Bug 126545.

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-24  Andrew Sobala  <aes@gnome.org>

	* Makefile.am, apply-font.glade, themus-theme-applier.c:
	added GUI to ask if a font should be applied

2003-07-21  Andrew Sobala  <aes@gnome.org>

	As per comments on Usability@gnome.org: