@@ -1,3 +1,8 @@
+2005-02-09  Sebastien Bacher  <seb128@debian.org>
+
+	* theme-thumbnailer.c: (main): change back to the previous code,
+        that fixes the themes:/// thumbnails (Closes: #165778).
+	
 2005-01-04  Shakti Sen <shprasad@novell.com>
 
 	* theme-thumbnailer.c (main): Added the full path of the theme
